# fastapi-template

./: .gitignore  pyproject.toml
App/: config-template.toml  main.py
App/alembic/: env.py
App/api/: __init__.py
App/api/v1/: __init__.py
App/api/v1/handlers/: __init__.py
App/api/v1/services/: __init__.py
App/core/: __init__.py  config.py
App/core/models/: base.py  db_helper.py
App/utils/: __init__.py
