[project]
authors = [
  {name = "jesuszwer", email = "zakianovd001@gmail.com"},
]
dependencies = [
  "fastapi (>=0.115.8,<0.116.0)",
  "uvicorn (>=0.34.0,<0.35.0)",
  "pydantic-settings (>=2.8.0,<3.0.0)",
  "sqlalchemy (>=2.0.38,<3.0.0)",
]
description = ""
license = {text = "MIT"}
name = "fastapi-shopapp"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

# poetry settings

[tool.ruff]
line-length = 88
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.format]
quote-style = "double"
